<resources>
    <string name="app_name" translatable="false">Grades</string>
    <string name="error_unknown">An unknown error has occurred.</string>
    <string name="error_connection">Unable to connect to server.</string>
    <string name="error_authentication">Invalid login. Please login again.</string>
    <string name="any_retryButton">retry</string>
    <string name="any_switchDistrictButton">switch district</string>
    <string name="districtSelection_title">Select District</string>
    <string name="login_loginInstructions">Log in with your Aeries account.</string>
    <string name="login_emailHint">email</string>
    <string name="login_passwordHint">password</string>
    <string name="login_loginButton">log in</string>
    <string name="login_blankEmailOrPassword">Please type an email and a password.</string>
    <string name="login_incorrectEmailPasswordDistrict">Email, password, or district is incorrect.</string>
    <string name="main_title">Classes</string>
    <string name="assignments_title">Assignments</string>
    <string name="menu_logout">Logout</string>
    <string name="selectStudent_title">Select Student</string>
    <string name="assignmentEdit_title">Edit Assignment</string>
    <string name="assignmentEdit_nameHint">name</string>
    <string name="assignmentEdit_points">points</string>
    <string name="assignmentEdit_maxPoints">total</string>
    <string name="prefCategory_notifications">Notifications</string>
    <string name="prefCategory_data">Data</string>
    <string name="pref_enableNotifications">Enable notifications (experimental)</string>
    <string name="prefSummary_enableNotifications">Send a notification when a class is updated</string>
    <string name="prefKey_enableNotifications" translatable="false">enableNotifications</string>
    <string name="pref_updateInterval">Check for updates every…</string>
    <string name="prefTitle_deleteLocalCachedData">Delete local cached data…</string>
    <string name="prefSummary_deleteLocalCachedData">Only deletes data in app (does not affect data on Aeries)</string>
    <string name="prefSummary_updateInterval" translatable="false">Minutes between each check for new updates</string>
    <string name="menu_settings">Settings</string>
    <string name="channel_classUpdates">Class Updates</string>
    <string name="channelDesc_classUpdates">Sends notification when a class is updated</string>
    <string name="dialogTitle_logout">Confirm Logout</string>
    <string name="dialogMsg_logout">Are you sure you want to log out?</string>
    <string name="dialogTitle_forceUpdate">Force Update</string>
    <string name="dialogMsg_forceUpdate">This will try to download the latest data for the gradebook even if no updates were detected.\n\nIf there are any errors in the displayed gradebook, this should fix the issue.</string>
    <string name="snackbar_updateForNotifications">Android version is unsupported. Notifications require Android 5.0</string>
    <string name="settings_title">Settings</string>
    <string name="prefCategory_premium">Premium</string>
    <string name="prefTitle_purchasePremium">Purchase premium</string>
    <string name="prefSummary_purchasePremium">Removes all ads from the app</string>
    <string name="error_googlePlay">Unable to connect to Google Play</string>
    <string name="manualEntry_title">Manual District Entry</string>
    <string name="manualEntry_instructions" translatable="false">
        1. Navigate to your district\'s Aeries in the browser
        \n\n2. Copy the entire URL (including the \"LoginParent.aspx?page=default.aspx\")
        \n\n3. Paste the URL below
        \n\n4. Click connect

    </string>
    <string name="hint_aeriesUrl" translatable="false">Aeries URL</string>
    <string name="button_connect">connect</string>
    <string name="prefCategory_feedback">Feedback</string>
    <string name="prefTitle_gpFeedback">Google Play Feedback</string>
    <string name="prefSummary_gpFeedback">Launch Google Play to leave feedback</string>
    <string name="prefTitle_theme">Change theme…</string>
    <string name="prefTitle_showPrior">Show all classes</string>
    <string name="prefSummary_showPrior">Shows all classes (including prior and dropped classes)</string>
    <string name="prefCategory_appearance">Appearance</string>
    <string name="prefTitle_boldUpdated">Bold updated classes</string>
    <string name="prefSummary_boldUpdated">Bolds the titles of classes with unseen changes</string>
</resources>