<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="website.jackl.jgrades.activity.AssignmentEditActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/assignmentEdit_title"
            style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assignmentEdit_title"
            tools:text="@string/assignmentEdit_title" />

    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/editAssignment_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/assignmentEdit_nameHint"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/editAssignment_points"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/assignmentEdit_points"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/editAssignment_slash"
        app:layout_constraintTop_toBottomOf="@+id/editAssignment_name" />

    <EditText
        android:id="@+id/editAssignment_maxPoints"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/assignmentEdit_maxPoints"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintLeft_toRightOf="@id/editAssignment_slash"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAssignment_name" />

    <TextView
        android:id="@+id/editAssignment_slash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="/"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editAssignment_category"
        app:layout_constraintLeft_toRightOf="@id/editAssignment_points"
        app:layout_constraintRight_toLeftOf="@+id/editAssignment_maxPoints"
        app:layout_constraintTop_toBottomOf="@+id/editAssignment_name" />

    <Spinner
        android:id="@+id/editAssignment_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAssignment_maxPoints" />
</android.support.constraint.ConstraintLayout>
